--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=theheroes
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
-spring.datasource.username=campus2023
-spring.datasource.password=campus2023
+spring.datasource.url=jdbc:mysql://root:AzfnGeGaWFeHJpYhMhxLenRmmACccgeH@monorail.proxy.rlwy.net:57923/railway
+spring.datasource.username=root
+spring.datasource.password=AzfnGeGaWFeHJpYhMhxLenRmmACccgeH
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
